Add button + initial form

--- a/app/style.css
+++ b/app/style.css
@@ -1,3 +1,15 @@
 .main-header {
   grid-template-columns: 1fr 2fr;
+}
+
+.addbtn {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  width: 60px;
+  height: 60px;
+  border-radius: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
