--- a/app/style.css
+++ b/app/style.css
@@ -12,4 +12,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.add-form {
+  position: absolute;
+  right: 20px;
+  bottom: 100px;
 }/*# sourceMappingURL=style.css.map */
