--- a/app/style.scss
+++ b/app/style.scss
@@ -15,3 +15,10 @@
     justify-content: center;
     align-items: center;
 }
+
+// FORM
+.add-form {
+    position: absolute;
+    right: 20px;
+    bottom: 100px;
+}
